# nikki5-server-selector

./: Cargo.toml  README.md  build.rs  icon.rc
src/: main.rs  nikki5-china-server.rs  nikki5-global-server.rs  nikki5-server-selector.rs  utils.rs
