[package]
name = "nikki5-server-selector"
version = "0.1.0"
edition = "2021"
[[bin]]
path = "src/nikki5-server-selector.rs"
name = "nikki5-server-selector"
[[bin]]
path = "src/nikki5-global-server.rs"
name = "nikki5-global-server"
[[bin]]
path = "src/nikki5-china-server.rs"
name = "nikki5-china-server"
[dependencies]
windows = { version = "0.58.0", features = ["Win32_UI_WindowsAndMessaging"] }

serde_json = "1.0"
serde = { version="1.0.216",features = ["derive"] }
lazy_static = "1.5.0"
toml = "0.8.19"

[build-dependencies]
embed-resource = "3.0.1"
